<resources>
    <string name="app_name">UIDesign</string>
    <string name="app_name_persian">کافه کوانتوم</string>
    <string name="app_name_english">Quantum Group</string>
    <string name="app_name_first_syllab">Quantum</string>
    <string name="app_name_second_syllab">group</string>
    <string name="PaySubmit">پرداخت</string>
    <string name="Submit">تائید</string>
    <string name="log_in">ورود</string>

    <string name="DepositSubmit_2">خرید</string>
    <string name="Inquiry">استعلام</string>
    <string name="NCodeSearch">جستجو (کد ملی)</string>
    <string name="Search">جستجو</string>
    <string name="NCode">کد ملی</string>
    <string name="discard">انصراف</string>
    <string name="LoanPay_no">شماره تسهیلات/وام</string>
    <string name="LoanAccount_no_label">شماره حساب/وام :</string>
    <string name="LoanAccount_no">شماره حساب/وام </string>
    <string name="GstId_no_label">شماره قسط :</string>
    <string name="GstRemain_no_label">مبلغ مانده :</string>
    <string name="LoanPay_no_label">شماره تسهیلات/وام :</string>
    <string name="pay_info">اطلاعات پرداخت</string>
    <string name="Login_info">اطلاعات کاربری</string>
    <string name="Setting_info">ورود به قسمت تنظیمات</string>
    <string name="SystemExit">خروج از سیستم</string>
    <string name="Deposit_info">اطلاعات واریز</string>
    <string name="account_no">شماره حساب :</string>
    <string name="account_no_label">شماره حساب</string>
    <string name="LoanOwnerName">صاحب حساب:</string>
    <string name="DepositOwnerName">صاحب حساب :</string>
    <string name="pay">مبلغ قسط :</string>
    <string name="deposit_amount">مبلغ واریزی :</string>
    <string name="date">تاریخ سررسید :</string>
    <string name="order_id">شماره سفارش :</string>
    <string name="under_construction">این قابلیت در حال ساخت است...</string>
    <string name="wrong_loan_number">شماره تسهیلات / وام وارد شده اشتباه است !</string>
    <string name="wrong_configuration">"دستگاه به درستی تنظيم نشده است  ،لطفا پشتيبان را آگاه سازيد"</string>
    <string name="wrong_account_number">شماره حساب وارد شده اشتباه است !</string>
    <string name="loan_number_required">فیلد شماره تسهیلات / وام اجباری است !</string>
    <string name="Acc_number_required">فیلد شماره حساب اجباری است !</string>
    <string name="NCode_required">فیلد کد ملی اجباری است !</string>
    <string name="version">نسخه 1</string>
    <string name="loanAmount">مبلغ قسط</string>
    <string name="PayConfirmed">پرداخت با موفقیت انجام شد.</string>
    <string name="TraceNo">شماره پیگیری :</string>
    <string name="RRN">شماره مرجع:</string>
    <string name="FLName">نام و نام خانوادگی :</string>
    <string name="TraceNo_Title">شماره پیگیری</string>
    <string name="TransactionDate">تاریخ تراکنش :</string>
    <string name="TransactionTime">زمان تراکنش :</string>
    <string name="TransactionTimeandDate">زمان :</string>
    <string name="FactorNo">شماره فاکتور :</string>
    <string name="TerminalCode">کد پذیرنده :</string>
    <string name="DocumentCode">شماره سند :</string>
    <string name="TerminalId">شماره پایانه :</string>
    <string name="Amount">مبلغ</string>
    <string name="Amount_Title">مبلغ :</string>
    <string name="Trans_Type_Title">نوع تراکنش :</string>
    <string name="Font_Medium">30sp</string>
    <string name="ProviderAddr_title">آدرس فراهم کننده </string>
    <string name="POSAddr_title">آدرس POS </string>
    <string name="FundAddr_title">آدرس صندوق </string>
    <string name="new_order">سفارش جدید</string>
    <string name="suspend_order">سفارش های جاری</string>
    <string name="cafe_title">کافه</string>
    <string name="cafe_title_eng">Cafe</string>
    <string name="board_game_title">بورد گیم</string>
    <string name="board_game_title_eng">Board Game</string>
    <string name="escape_room_title">اتاق ترس</string>
    <string name="escape_room_title_eng">Escape Room</string>
    <string name="event_title">ایونت</string>
    <string name="event_title_eng">Event</string>
    <string name="WiFiDisconnected">ارتباط با شبکه قطع میباشد. لطفا اتصال را بررسی نمایید .</string>
    <string name="errorInFindingMerchantInfos">اطلاعات پیکربندی دستگاه یافت نشد. لطفا دوباره تلاش کنید یا با مسئول سیستم تماس بگیرید .</string>
    <string name="isAppDisabled">دستگاه غیر فعال است. لطفا پشتیبان را باخبر سازید.</string>
    <string name="wiFiDisconnected_title">خطا در اتصال به شبکه</string>
    <string name="Login">ورود</string>
    <string name="Return">بازگشت</string>
    <string name="Save">ذخیره</string>
    <string name="Username">نام کاربری</string>
    <string name="Password">رمز عبور</string>
    <string name="WrongUserNamePassword">ترکیب نام کاربری و رمز عبور وارد شده اشتباه است ! دوباره سعی نمایید .</string>
    <string name="UserPassRequired">هر دو فیلد اجباری هستند !</string>
    <string name="wrongProviderAddr">آدرس فراهم کننده اشتباه وارد شده است !</string>
    <string name="successfulSettingSaved">تنظیمات با موفقیت ذخیره شد.</string>
    <string name="resync">به روزرسانی داده ها</string>
    <string name="resync_title">به روزرسانی</string>
    <string name="print_title">چاپ</string>
    <string name="ErrorInSavingInfo">خطا در ذخیره سازی اطلاعات...پشتیبان را باخبر سازید !</string>


    <!--Menu Items-->
    <string name="Setting">تنظيمات</string>
    <string name="Update">بروزرساني دستگاه</string>
    <!-- <string name="LastReceipPrint">چاپ آخرين رسيد</string> -->
    <string name="ReportList">گزارش گيري</string>
    <string name="SystemReset">راه اندازی مجدد</string>
    <string name="SystemLogout">خروج از سيستم</string>
    <string name="SystemAddress">192.168.100.236</string>
    <!--End Of Menu Items-->

    <string name="sharedPreferences_file_name">ShPref</string>
    <string name="totalAmountIsZero">مبلغ قابل پرداخت صفر است.</string>
    <string name="error">خطا </string>
    <string name="warning">هشدار : </string>
    <string name="message">پیام : </string>
    <string name="title_activity_re_settings">ReSettingsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello Sandoogh from section:</string>
    <string name="saman_title">شرکت پرداخت الکترونیک سامان</string>
    <string name="saman_tel">021-84080</string>
    <string name="SystemUpdate">دستگاه با موفقیت بروز رسانی شد</string>
    <string name="ReportSelection">گزارش گيري</string>
    <string name="FromDate">از تاريخ</string>
    <string name="UntilDate"> تا تاريخ</string>
    <string name="Report_Show">مشاهده</string>
    <string name="Report_Print">چاپ</string>
    <string name="Trans_Print">چاپ تراکنش</string>


    <!--    Error Code     -->
    <string name="e200">با موفقیت</string>
    <string name="e400">درخواست نادرست</string>
    <string name="accept_payment">آیا با پرداخت موافق هستید ؟</string>
    <string name="tableNo">شماره میز</string>
    <string name="paymentOk">پرداخت</string>
    <string name="paymentCancel">انصراف</string>
    <string name="paymentAccept">تائید</string>
    <string name="paymentSuspend">معلق</string>
    <string name="sharedPrefName">orderPref</string>
    <string name="title_activity_suspended_orders">SuspendedOrders</string>
    <string name="currency_unit">ریال</string>
    <string name="already_existed_error">این آیتم از قبل به لیست اضافه شده است !</string>
    <string name="wrongTableNumber">شماره میز را بدرستی وارد کنید !</string>

</resources>
